k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-quest
  labels:
    name: code-quest
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
