k8s/backend-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-loadbalancer
  namespace: code-quest
  labels:
    app: backend
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: backend
